--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {"node":"18.x"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start":"node index.js"
   },
   "author": "Ashish Verma",
   "license": "ISC",
