--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "Ashish Verma",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4",
-    "winston": "^3.13.0"
+    "mongoose": "^8.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
